zag-poc/tests/diag/e0002_realtime_alloc.expected
error[E0002]: capability violation — `@realtime` constraint broken in function `bad_realtime`
  --> tests/diag/e0002_realtime_alloc.zag:2:1
   |
2 | fn bad_realtime(n: i32) void @realtime {
   | ^^^^^^^^^^^^ effect occurs here
   = note: @realtime functions must not perform heap allocation, IO, or lock acquisition
   = hint: remove the allocation/IO/lock, or remove the @realtime annotation
