zag-poc/tests/diag/e0002_realtime_alloc.zag
// E0002: @realtime function must not allocate (uses zalloc directly)
fn bad_realtime(n: i32) void @realtime {
    let buf: []i32 = zalloc(n);
    zfree(buf);
}

fn main() i32 {
    return 0;
}
